[package]
name = "catr"
version = "0.1.0"
edition = "2021"
author = "Martin Paul Eve <martin@eve.gd>"
about = "A GNU cat clone written in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.15", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
rand = "0.8"
